--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -651,173 +651,173 @@
   <div class="marquee-content">
     <div class="marquee Item">
       <a href="https://www.sibur.ru/ru/">
-        <img src=".images/sibur.png">
+        <img src="./images/sibur.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.rosneft.ru/">
-        <img src=".images/rosneft.png">
+        <img src="./images/rosneft.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.tatneft.ru/">
-        <img src=".images/tatneft.png">
+        <img src="./images/tatneft.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://rmk-group.ru/ru/">
-        <img src=".images/rmk.png">
+        <img src="./images/rmk.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://belaz.by/">
-        <img src=".images/belaz.png">
+        <img src="./images/belaz.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.gazprom.ru/">
-        <img src=".images/gazprom.png">
+        <img src="./images/gazprom.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.caterpillar.com/">
-        <img src=".images/caterpillar.png">
+        <img src="./images/caterpillar.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.orica.com/">
-        <img src=".images/orica.png">
+        <img src="./images/orica.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.novatek.ru/ru/">
-        <img src=".images/novatek.png">
+        <img src="./images/novatek.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="http://www.titan-omsk.ru/">
-        <img src=".images/titan.png">
+        <img src="./images/titan.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://systeme.ru/">
-        <img src=".images/system_electric.png">
+        <img src="./images/system_electric.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://vinacomin.vn/">
-        <img src=".images/vinacomin.png">
+        <img src="./images/vinacomin.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://kali.by/">
-        <img src=".images/belaruskali.png">
+        <img src="./images/belaruskali.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.marubeni.com/en/">
-        <img src=".images/marubeni.png">
+        <img src="./images/marubeni.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.zeppelin.ru/">
-        <img src=".images/zeppelin.png">
+        <img src="./images/zeppelin.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://endiamaimprensa.com/">
-        <img src=".images/endiama.png">
+        <img src="./images/endiama.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://mrg.gazprom.ru/">
-        <img src=".images/gazprom_mrg.png">
+        <img src="./images/gazprom_mrg.png">
       </a>
     </div>
 
     <div class="marquee Item">
       <a href="https://www.sibur.ru/ru/">
-        <img src=".images/sibur.png">
+        <img src="./images/sibur.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.rosneft.ru/">
-        <img src=".images/rosneft.png">
+        <img src="./images/rosneft.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.tatneft.ru/">
-        <img src=".images/tatneft.png">
+        <img src="./images/tatneft.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://rmk-group.ru/ru/">
-        <img src=".images/rmk.png">
+        <img src="./images/rmk.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://belaz.by/">
-        <img src=".images/belaz.png">
+        <img src="./images/belaz.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.gazprom.ru/">
-        <img src=".images/gazprom.png">
+        <img src="./images/gazprom.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.caterpillar.com/">
-        <img src=".images/caterpillar.png">
+        <img src="./images/caterpillar.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.orica.com/">
-        <img src=".images/orica.png">
+        <img src="./images/orica.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.novatek.ru/ru/">
-        <img src=".images/novatek.png">
+        <img src="./images/novatek.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="http://www.titan-omsk.ru/">
-        <img src=".images/titan.png">
+        <img src="./images/titan.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://systeme.ru/">
-        <img src=".images/system_electric.png">
+        <img src="./images/system_electric.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://vinacomin.vn/">
-        <img src=".images/vinacomin.png">
+        <img src="./images/vinacomin.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://kali.by/">
-        <img src=".images/belaruskali.png">
+        <img src="./images/belaruskali.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.marubeni.com/en/">
-        <img src=".images/marubeni.png">
+        <img src="./images/marubeni.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://www.zeppelin.ru/">
-        <img src=".images/zeppelin.png">
+        <img src="./images/zeppelin.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://endiamaimprensa.com/">
-        <img src=".images/endiama.png">
+        <img src="./images/endiama.png">
       </a>
     </div>
     <div class="marquee Item">
       <a href="https://mrg.gazprom.ru/">
-        <img src=".images/gazprom_mrg.png">
+        <img src="./images/gazprom_mrg.png">
       </a>
     </div>
   </div>
