--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -730,6 +730,11 @@
       </a>
     </div>
     <div class="marquee Item">
+      <a href="https://www.erdenetmc.mn/ru/">
+        <img src="./images/erdenet.png">
+      </a>
+    </div>
+    <div class="marquee Item">
       <a href="https://mrg.gazprom.ru/">
         <img src="./images/gazprom_mrg.png">
       </a>
@@ -816,6 +821,11 @@
       </a>
     </div>
     <div class="marquee Item">
+      <a href="https://www.erdenetmc.mn/ru/">
+        <img src="./images/erdenet.png">
+      </a>
+    </div>
+    <div class="marquee Item">
       <a href="https://mrg.gazprom.ru/">
         <img src="./images/gazprom_mrg.png">
       </a>
@@ -833,7 +843,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 850vw;
+    width: 900vw;
     height: 14.125rem;
   }
 
